--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "chuiyu-bot",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@vercel/functions": "^1.0.0"
+  }
 }
